<resources>
    <string name="app_name">Scraddle</string>

    <string name="start_new_game_text">Start\nS\nc\no\nr\ni\nn\ng</string>
    <string name="leader_board">L\ne\na\nd\ne\nr\nb\no\na\nr\nd</string>
    <string name="continue_button_text">Continue</string>
    <string name="settings_button_text">Settings</string>
    <string name="anagram_solver_button_text">Anagram\nSolver</string>
    <string name="crossword_solver">Crossword\nSolver</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Anagram Preferences -->
    <string name="maxAnagramLetters">17</string>

    <!-- Select Player and Scoring -->
    <string name="title_activity_score">Score Activity</string>


    <!-- Settings Screen -->
    <string name="deleteAllTitle">Delete All</string>
    <string name="createPlayer">createPlayer</string>
    <string name="deletePlayer">Delete Players</string>
    <string name="scraddle_logo">Scraddle Logo</string>
    <string name="no_words">No Words Available</string>
    <string name="drag_handle">drag handle</string>
    <string name="dividing_line_content_description">dividing line</string>
    <string name="anagramEnterTextHint">Enter your letters</string>
    <string name="all_words_button">All Words</string>
    <string name="anagram_button_2">2</string>
    <string name="anagram_button_3">3</string>
    <string name="anagram_button_4">4</string>
    <string name="anagram_button_5">5</string>
    <string name="anagram_button_6">6</string>
    <string name="anagram_button_7">7</string>
    <string name="anagram_button_8_or_more">8+</string>
    <string name="leader_board_heading">Leader Board</string>

    <!-- CALC  -->
    <string name="initial_heading_above_calc_before_first_move">Tap Start to begin…</string>
    <string name="button_clear">C</string>
    <string name="scoring_button_add_no_score">Next</string>
    <string name="buttonAddZeroText">0</string>
    <string name="scoring_button_plus_one">1</string>
    <string name="buttonAddTwoText">2</string>
    <string name="buttonAddThreeText">3</string>
    <string name="buttonAddFourText">4</string>
    <string name="scoring_button_plus_five">5</string>
    <string name="buttonAddSixText">6</string>
    <string name="buttonAddSevenText">7</string>
    <string name="buttonAddEightText">8</string>
    <string name="buttonAddNineText">9</string>

    <!-- END Calc  -->
    <string name="select_players_start_scoring_button">Start Scoring</string>
    <string name="menu_select_players">Select Players</string>
    <string name="menu_create_player">Create Player</string>
    <string name="leaderboard_games_played_label">Games Played:</string>
    <string name="leaderboard_games_won_label">Won:</string>
    <string name="leaderboard_games_lost_label">Lost:</string>
    <string name="leaderboard_games_drawn_label">Drawn:</string>
    <string name="leaderboard_games_highest_match_score_label">Best Match Score</string>
    <string name="leaderboard_games_largest_word_score_label">Largest Word Score</string>
    <string name="scorecard_last_score_label">Last Score</string>
    <string name="scorecard_best_score_label">Best Score</string>
    <string name="scorecard_personal_best_label">Personal Best</string>
    <string name="menu_scoring_undo_button_label">Undo</string>
    <string name="menu_scoring_save_button_label">Save</string>
    <string name="menu_scoring_finish_button_label">Finish</string>
    <string name="menu_scoring_delete_button_label">Delete</string>


    <string name="sortdirectionarrow">Sort Direction Arrow</string>
    <string name="default_sort_order_button_text">DEFAULT SORT ORDER</string>
    <string name="leaderboardButtonLabelLandscape">Leaderboard</string>
    <string name="continueButtonLabelLandscape">continue</string>
    <string name="personalBestLabel">Highest\nMatch Score</string>
    <string name="anagram_no_words_text">Much Nothing ...</string>
    <string name="anagram_image_robot_no_items_content_description">Picture of a robot, announcing there is no items</string>
    <string name="title_activity_scorer">Scorer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_word">Check Word</string>
    <string name="try_again">Try Again</string>
    <string name="paused">Paused</string>
    <string name="times_up_message">TIMES UP!</string>
    <string name="timer_string_no_time_remaining">0:00</string>


</resources>
