<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="#000000"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:showIn="@layout/fragment_player_scoring">

    <Button
        android:id="@+id/buttonAddToPlayer"
        style="@style/buttonCalcPortrait"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/calc_buttons"

        android:backgroundTint="@color/activePlayer"
        android:lines="2"
        android:text="@string/scoring_button_add_no_score"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:text="Add To Player" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonDeleteLast"
            style="@style/buttonCalcPortrait"
            android:background="@drawable/ic_backspace_black_24dp"
            android:backgroundTint="#F44336"
            android:translationX="-3dp" />

        <Button
            android:id="@+id/buttonClear"
            style="@style/buttonCalcPortrait"
            android:text="@string/button_clear"
            android:textColor="#F44336" />

        <!--android:adjustViewBounds="true"
                android:scaleType="fitCenter"-->


        <Button
            style="@style/buttonCalcPortrait"
            android:text="@string/buttonAddZeroText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAddOne"
            style="@style/buttonCalcPortrait"
            android:text="@string/scoring_button_plus_one" />

        <Button
            android:id="@+id/buttonAddFour"
            style="@style/buttonCalcPortrait"
            android:text="@string/buttonAddFourText" />

        <Button
            android:id="@+id/buttonAddSeven"
            style="@style/buttonCalcPortrait"
            android:text="@string/buttonAddSevenText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <Button
            android:id="@+id/buttonAddTwo"
            style="@style/buttonCalcPortrait"
            android:text="@string/buttonAddTwoText" />

        <Button
            android:id="@+id/buttonAddFive"
            style="@style/buttonCalcPortrait"
            android:text="@string/scoring_button_plus_five" />

        <Button
            android:id="@+id/buttonAddEight"
            style="@style/buttonCalcPortrait"
            android:text="@string/buttonAddEightText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <Button
            android:id="@+id/buttonAddThree"
            style="@style/buttonCalcPortrait"
            android:text="@string/buttonAddThreeText" />

        <Button
            android:id="@+id/buttonAddSix"
            style="@style/buttonCalcPortrait"
            android:text="@string/buttonAddSixText" />

        <Button
            android:id="@+id/buttonAddNine"
            style="@style/buttonCalcPortrait"
            android:text="@string/buttonAddNineText" />


    </LinearLayout>

</LinearLayout>