<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="0dp"
    tools:showIn="@layout/activity_anagram_checker">

    <ImageView
        android:id="@+id/anagramSortDirectionImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/buttonripple"
        android:backgroundTint="#009688"
        android:contentDescription="@string/sortdirectionarrow"
        app:layout_constraintBottom_toBottomOf="@+id/anagramChangeSortButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="24dp" />

    <Button
        android:id="@+id/anagramChangeSortButton"
        style="@style/anagramButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonripple"
        android:backgroundTint="#00BCD4"
        android:text="@string/default_sort_order_button_text"
        app:layout_constraintEnd_toStartOf="@+id/anagramSortDirectionImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="370dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anagramChangeSortButton">

        <Button
            android:id="@+id/button_allWords"
            style="@style/anagramButton"
            android:backgroundTint="#E91E63"
            android:text="@string/all_words_button"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonTwoWords"
            style="@style/anagramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/anagram_button_2" />

        <Button
            android:id="@+id/buttonThree"
            style="@style/anagramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#8BC34A"
            android:text="@string/anagram_button_3" />

        <Button
            android:id="@+id/buttonFour"
            style="@style/anagramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#CDDC39"
            android:text="@string/anagram_button_4" />

        <Button
            android:id="@+id/buttonFive"
            style="@style/anagramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFEB3B"
            android:text="@string/anagram_button_5" />

        <Button
            android:id="@+id/buttonSix"
            style="@style/anagramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:text="@string/anagram_button_6" />

        <Button
            android:id="@+id/buttonSeven"
            style="@style/anagramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:text="@string/anagram_button_7" />

        <Button
            android:id="@+id/buttonEight"
            style="@style/anagramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/roundbutton"
            android:backgroundTint="#FF5722"
            android:text="@string/anagram_button_8_or_more"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>