<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:background="@drawable/custom_border_scoring"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPlayerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="?android:attr/colorPrimary"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            tools:text="Robbie" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:labelFor="@id/textViewLastScore"
                android:text="@string/scorecard_last_score_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewLastScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="36sp"
                tools:text="12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:labelFor="@id/textViewBestScore"
                android:text="@string/scorecard_best_score_label"
                android:textStyle="bold"
                tools:text="Best Score" />

            <TextView
                android:id="@+id/textViewBestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="36sp"
                tools:text="35" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:labelFor="@id/textViewPersonalBest"
                android:text="@string/scorecard_personal_best_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPersonalBest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="36sp"
                tools:text="56" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:attr/colorPrimary"
            android:contentDescription="@string/dividing_line_content_description"
            app:srcCompat="?attr/dividerVertical" />

        <TextView
            android:id="@+id/textViewPlayerTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="86sp"
            tools:text="0" />

    </LinearLayout>

    <ImageView
        android:id="@+id/scoreCardTallyDividerTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?android:attr/colorPrimary"
        android:contentDescription="@string/dividing_line_content_description"
        android:visibility="gone"
        app:srcCompat="?attr/dividerHorizontal"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tVScoreTally"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:visibility="gone"
        tools:text="4 + 4 +56 +78 +89 +65"
        tools:visibility="visible" />


</LinearLayout>